--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@emailjs/browser": "^4.3.3",
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
+    "@material-tailwind/react": "^2.1.9",
+    "@tinymce/tinymce-react": "^5.0.1",
+    "firebase": "^10.12.0",
     "hamburger-react": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
